Fix the Banner overlapping issue

--- a/src/Banner.css
+++ b/src/Banner.css
@@ -4,25 +4,29 @@
   height: 50vh;
   position: relative;
 }
+
 .banner__info {
   background-color: black;
   color: white;
-  padding-top: 25vh;
+  padding-top: 15.4vh;
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 40px;
-  width: 300px;
+  max-width: 300px;
 }
+
 .banner__search {
   display: flex;
   flex-direction: column;
 }
+
 .banner__searchButton {
   background-color: white !important;
   font-weight: 900 !important;
   text-transform: inherit !important;
   color: #ff7779 !important;
 }
+
 .banner__info > button {
   background-color: #ff7779;
   color: white;
@@ -30,10 +34,12 @@
   margin-top: 20px;
   font-weight: 600;
 }
-.banner__info > h5 {
-  margin-top: 10px;
-}
+
 .banner__info > button:hover {
   background-color: white;
   color: #ff7779;
+}
+
+.banner__info > h5 {
+  margin-top: 10px;
 }
